// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`splitTwammOrderByPriceImpact > various pools > one pool 1`] = `
[
  {
    "amount": "1000000000000000000",
    "fee": "1",
  },
]
`;

exports[`splitTwammOrderByPriceImpact > various pools > three pools, one with 10x liquidity, maxSplits 2 1`] = `
[
  {
    "amount": "499663812509254998",
    "fee": "1",
  },
  {
    "amount": "500336187490745002",
    "fee": "3",
  },
]
`;

exports[`splitTwammOrderByPriceImpact > various pools > two pools, one with 10x liquidity 1`] = `
[
  {
    "amount": "490731395773697380",
    "fee": "1",
  },
  {
    "amount": "509268604226302620",
    "fee": "2",
  },
]
`;

exports[`splitTwammOrderByPriceImpact > various pools > two pools, same liquidity 1`] = `
[
  {
    "amount": "500000000000000000",
    "fee": "1",
  },
  {
    "amount": "500000000000000000",
    "fee": "2",
  },
]
`;

exports[`splitTwammOrderByPriceImpact > various pools > two pools, same liquidity, different rates, maxSplits 1 1`] = `
[
  {
    "amount": "1000000000000000000",
    "fee": "2",
  },
]
`;
